--- a/style.css
+++ b/style.css
@@ -51,13 +51,18 @@ p{
     color: #FFFFFF;
 }
 #searchbtn{
-    border: 2px solid #B8BCCC;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     background: #575A85;
     border-radius: 5px;
     padding: 16px 70px;
     text-decoration: none;
     margin-left: 15rem;
     margin-top: 1rem;
+}
+#searchbtn:hover{
+    cursor: pointer;
+    background-color: blueviolet;
+    transform: scale(1.02)
 }
 
 /* --------------------------------------------MEDIA QUERY--------------------------------------------------------------------------- */
@@ -265,6 +270,7 @@ font-size: 44px;
     width: 90vw;
     height: 8vh;
     border-radius: 10px;
+    padding-left: 20px;
     margin-top: 2rem;
 }
 .grid-container {
@@ -289,21 +295,7 @@ font-size: 44px;
   .grid-item span{
     color: white;
   }
-/* #card{
-    margin-top: 2rem;
-    width: auto ;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-} */
-/* .card-body{
-    background-color: #575A85;
-    border: 1px solid white;
-    border-radius: 8px;
-    overflow: wrap;
-    width: 40vw;
-    margin-top: 1rem;   
-} */
+
 /* --------------------------------------------MEDIA QUERY FOR 2ND PAGE--------------------------------------------------------------------------- */
 @media screen and (min-width: 320px) and (max-width: 480px){
     #text {
